--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-materialize": "^2.4.8",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.4.0-beta.5",
     "react-scripts": "2.0.5",
