--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ajv": "^6.5.4",
     "axios": "^0.18.0",
+    "jspdf": "^1.4.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-materialize": "^2.4.8",
